--- a/conf/vidamed.properties
+++ b/conf/vidamed.properties
@@ -1,8 +1,8 @@
-filesDirectory=C:\\Users\\Marion\\Documents\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\
-filesDirectoryEco=C:\\Users\\Marion\\Documents\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Eco
-filesDirectoryLab=C:\\Users\\Marion\\Documents\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Laboratorio
-filesDirectoryRay=C:\\Users\\Marion\\Documents\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\RayosX
-filesDirectoryBanco=C:\\Users\\Marion\\Documents\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\BancoSangre
+filesDirectory=C:\\Users\\Carlos\\eclipse\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\
+filesDirectoryEco=C:\\Users\\Carlos\\eclipse\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Eco
+filesDirectoryLab=C:\\Users\\Carlos\\eclipse\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Laboratorio
+filesDirectoryRay=C:\\Users\\Carlos\\eclipse\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\RayosX
+filesDirectoryBanco=C:\\Users\\Carlos\\eclipse\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\BancoSangre
 
 
 
