--- a/WebContent/conf/vidamed.properties
+++ b/WebContent/conf/vidamed.properties
@@ -1,9 +1,16 @@
-filesDirectory=C:\\Program Files\\apache-tomcat-7.0.12\\webapps\\vidamed\\files\\
-filesDirectoryEco=C:\\Program Files\\apache-tomcat-7.0.12\\webapps\\vidamed\\files\\Eco
-filesDirectoryLab=C:\\Program Files\\apache-tomcat-7.0.12\\webapps\\vidamed\\files\\Laboratorio
-filesDirectoryRay=C:\\Program Files\\apache-tomcat-7.0.12\\webapps\\vidamed\\files\\RayosX
-filesDirectoryBanco=C:\\Program Files\\apache-tomcat-7.0.12\\webapps\\vidamed\\files\\BancoSangre
+filesDirectory=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\
+filesDirectoryEco=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Eco
+filesDirectoryLab=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Laboratorio
+filesDirectoryRay=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\RayosX
+filesDirectoryBanco=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\BancoSangre
 
+syncBatchFile=C:\\"Program Files"\\apache-tomcat-7.0.12\\webapps\\vidamed\\rsc\\sync.bat
 
+webDirectoryEco=./files/Eco/
+webDirectoryLab=./files/Laboratorio/
+webDirectoryRay=./files/RayosX/
+webDirectoryBanco=./files/BancoSangre/
 
 fileSeparator=\\
+
+cashPayment=10007
