--- a/WebContent/conf/vidamed-server.properties
+++ b/WebContent/conf/vidamed-server.properties
@@ -9,3 +9,5 @@ filesDirectoryRay=C:\\Users\\Administrador\\Vidamed\\files\\RayosX
 filesDirectoryBanco=C:\\Users\\Administrador\\Vidamed\\files\\BancoSangre
 
 fileSeparator=\\
+
+cashPayment=4
