Cambios configuracion/correccion errores

--- a/WebContent/conf/vidamed.properties
+++ b/WebContent/conf/vidamed.properties
@@ -1,10 +1,10 @@
-filesDirectory=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\
-filesDirectoryEco=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Eco
-filesDirectoryLab=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Laboratorio
-filesDirectoryRay=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\RayosX
-filesDirectoryBanco=C:\\Users\\Yomi\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\BancoSangre
+filesDirectory=C:\\Users\\lenovo\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\
+filesDirectoryEco=C:\\Users\\lenovo\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Eco
+filesDirectoryLab=C:\\Users\\lenovo\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\Laboratorio
+filesDirectoryRay=C:\\Users\\lenovo\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\RayosX
+filesDirectoryBanco=C:\\Users\\lenovo\\workspace\\vidamed-interfaz-vieja\\WebContent\\files\\BancoSangre
 
-syncBatchFile=C:\\"Program Files"\\apache-tomcat-7.0.12\\webapps\\vidamed\\rsc\\sync.bat
+syncBatchFile=C:\\apache-tomcat-9.0.0.M15\\webapps\\vidamed\\rsc\\sync.bat
 
 webDirectoryEco=./files/Eco/
 webDirectoryLab=./files/Laboratorio/
@@ -15,12 +15,12 @@ fileSeparator=\\
 
 cashPayment=4
 
-specialist=29,67
+specialist=29,66
 
 xRay=18
 
 lab=17
 
-eco=10084
+eco=92
 
-bloodBank=10083
+bloodBank=91
